# Static-Timing-Analyzer

./: CMakeLists.txt  README.md
src/: main.cpp  timing_graph.cpp  timing_graph.h
src/sta/: netlist_builder.cpp  timing_graph.cpp  timing_graph.h
src/verilog/: ast.h  parser.cpp  parser.h
verilog/: test1.v
